--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -26,9 +26,10 @@
     </div>
     <div ng-show="edit_mode == true">
       <form ng-submit="">
-        <a class="btn" href="{{edit_link}}"  ng-class="{disabled: disable_single_edit_buttons}">edit</a>
+        <a class="btn" href="{{edit_link}}" ng-class="{disabled: disable_single_edit_buttons}">edit</a>
         <a class="btn" href="{{view_link}}"  ng-class="">view</a>
         <button class="btn" ng-click="deleteAnyListItems(selected_campaigns, campaignList)">delete</button>
+        <button class="btn" ng-click="archiveListItem(selected_campaigns, campaignList)">archive</button>
         <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)">duplicate</button>
       </form>
     </div>
@@ -61,6 +62,20 @@
         </form>
       </li>
     </ul>
-    
+    <button ng-click="toggleArchived()" class="btn full_width">
+      <span ng-show="view_archived == true">hide archived</span>
+      <span ng-show="view_archived == false">view archived</span>
+    </button>
+    <ul class="object_list" ng-show="view_archived == true">
+      <li ng-repeat="campaign in archivedCampaignList">
+        <div class="left">
+          <button class="checkbox" ng-click="selectCampaign('{{campaign.id}}')"></button>
+        </div>
+        <a href="#/campaign/{{campaign.id}}/instances">
+          <small>@{{campaign.handle}}</small>
+          <h2>{{campaign.title}}</h2>
+        </a>
+      </li>
+    </ul>
   </section>
 </div>
