created template for response form. and added to user's history.

--- a/css/app.css
+++ b/css/app.css
@@ -259,7 +259,7 @@ header .btn {
 
 /* @end */
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
@@ -604,6 +604,12 @@ fieldset.padded {
 
 .answers .inline input {
   margin-left: 1em;
+}
+
+.checked {
+  width: 20px;
+  height: 20px;
+  background-color: #5ab534;
 }
 
 .answers li.inline:first-of-type input {
