--- a/partials/form.html
+++ b/partials/form.html
@@ -8,7 +8,7 @@
           <div ng-show="question.type == 'multipleChoice'">
             <h3 ng-bind="question.text">Multiple-Choice</h3>
             <ul class='answers'>
-              <li ng-repeat="answer in question.answers">
+              <li ng-repeat="answer in question.answers" class="inline">
                 <input type="radio" name="answer_{{question.id}}" id="answer_{{question.id}}{{answer.id}}" />
                 <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
               </li>
@@ -20,7 +20,7 @@
           <div ng-show="question.type == 'rating'">
             <h3 ng-bind="question.text"></h3>
             <ul class='answers'>
-              <li ng-repeat="answer in question.answers">
+              <li ng-repeat="answer in question.answers" class="inline">
                 <input type="radio" name="answer_{{question.id}}" id="answer_{{question.id}}{{answer.id}}" />
                 <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
               </li>
