--- a/partials/instance_simple.html
+++ b/partials/instance_simple.html
@@ -1,4 +1,5 @@
 <article class="card" ng-init="instance.cap = -2">
+  <button class="btn right" ng-click="toggleFullFormView()">toggle view</button>
   <h4>
     <span ng-bind="instance.name"></span>
     <span ng-bind="instance.handle"></span>
