--- a/partials/analytics.html
+++ b/partials/analytics.html
@@ -1,11 +1,13 @@
-<header>
-  <a href="#/campaign/{{campaignId}}/instances" class="btn left">back</a>
-  <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
-  <h1 ng-bind="title"></h1>
-</header>
-
-<div class="scroller_wrapper  with_header_padding">
-  <section class="scroller">
-    Ah, but there is nothing here. C'est un traviste.
-  </section>
+<div class="animation_wrapper">
+  <header>
+    <a href="#/campaign/{{campaignId}}/instances" class="btn left">back</a>
+    <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
+    <h1 ng-bind="title"></h1>
+  </header>
+  
+  <div class="scroller_wrapper  with_header_padding">
+    <section class="scroller">
+      Ah, but there is nothing here. C'est un traviste.
+    </section>
+  </div>
 </div>
