--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -1,45 +1,47 @@
-<header>
-  <a href="#/campaign/{{campaignId}}/instances" class="btn left">back</a>
-  <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
-  <h1 ng-bind="title"></h1>
-</header>
-
-<div class="scroller_wrapper with_header_padding">
-  <section class="scroller">
-    
-    <div class="btnset two_btns">
-      <button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'open'}">Open</button><button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'closed'}">Closed</button>
-    </div>
-    
-    <div class="data_section row">
-      <figure class="data centered col-1-3">
-        <div class="big_number">2</div>
-        <figcaption>rewards open</figcaption>
-      </figure>
-      <ul class="data text col-2-3">
-        <li>No rewards are expiring this month.</li>
-        <li>No rewards have been redeemed this month.</li>
+<div class="animation_wrapper">
+  <header>
+    <a href="#/campaign/{{campaignId}}/instances" class="btn left">back</a>
+    <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
+    <h1 ng-bind="title"></h1>
+  </header>
+  
+  <div class="scroller_wrapper with_header_padding">
+    <section class="scroller">
+      
+      <div class="btnset two_btns">
+        <button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'open'}">Open</button><button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'closed'}">Closed</button>
+      </div>
+      
+      <div class="data_section row">
+        <figure class="data centered col-1-3">
+          <div class="big_number">2</div>
+          <figcaption>rewards open</figcaption>
+        </figure>
+        <ul class="data text col-2-3">
+          <li>No rewards are expiring this month.</li>
+          <li>No rewards have been redeemed this month.</li>
+        </ul>
+      </div>
+      
+      <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
+      <ul class="object_list">
+        <li ng-repeat="reward in rewardsList | filter:search_query">
+          <button class="btn right" ng-click="claimReward(reward)" class="btn" ng-class="{claimed: reward.date_claimed != false}">redeem</button>
+          <a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
+            <h2 ng-bind="reward.title"></h2>
+            <dl>
+              <dt>Owner:</dt>
+              <dd ng-bind="reward.owner"></dd>
+              <dt ng-show="rewardsView == 'open'">Issued:</dt>
+              <dd ng-show="rewardsView == 'open'" ng-bind="reward.date_issued"></dd>
+              <dt ng-show="rewardsView == 'open'">Secret Code:</dt>
+              <dd ng-show="rewardsView == 'open'" ng-bind="reward.passphrase"></dd>
+              <dt ng-show="reward.date_claimed != false">Date Redeemed:</dt>
+              <dd ng-show="reward.date_claimed != false" ng-bind="reward.date_claimed"></dd>
+            </dl>
+          </a>
+        </li>
       </ul>
-    </div>
-    
-    <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
-    <ul class="object_list">
-      <li ng-repeat="reward in rewardsList | filter:search_query">
-        <button class="btn right" ng-click="claimReward(reward)" class="btn" ng-class="{claimed: reward.date_claimed != false}">redeem</button>
-        <a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
-          <h2 ng-bind="reward.title"></h2>
-          <dl>
-            <dt>Owner:</dt>
-            <dd ng-bind="reward.owner"></dd>
-            <dt ng-show="rewardsView == 'open'">Issued:</dt>
-            <dd ng-show="rewardsView == 'open'" ng-bind="reward.date_issued"></dd>
-            <dt ng-show="rewardsView == 'open'">Secret Code:</dt>
-            <dd ng-show="rewardsView == 'open'" ng-bind="reward.passphrase"></dd>
-            <dt ng-show="reward.date_claimed != false">Date Redeemed:</dt>
-            <dd ng-show="reward.date_claimed != false" ng-bind="reward.date_claimed"></dd>
-          </dl>
-        </a>
-      </li>
-    </ul>
-  </section>
+    </section>
+  </div>
 </div>
