--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -1,81 +1,83 @@
-<header>
-  <button ng-click="toggleSidebar('right')" class="btn left">menu</button>
-  
-  <h1>{{title}}</h1>
-</header>
-
-<div class="scroller_wrapper with_header_padding">
-  <section class="scroller">
-    <button class="btn full_width" ng-click="toggleNewMode()" ng-show="!new_mode" ng-hide="edit_mode == true">+ New Campaign</button>
-    <div ng-show="new_mode">
-      <form ng-submit="createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)">
-        <label for="handle_select">Choose a handle</label>
-        <select ng-model="handle" id="handle_select" ng-change="changeHandle()" >
-          <option ng-repeat="handle in handleList" ng-bind="handle" value="{{handle}}"></option>
-          <option value="+">+ create new</option>
-        </select>
-        
-        <label for="handle_text" ng-show="handle == '+'" ng-animate="'collapse'">New handle name:</label>
-        <input id="handle_text" ng-show="handle == '+'"ng-animate="'collapse'" class="inline" type="text" name="new_handle" placeholder="Try your twitter handle!" ng-model="handle_to_submit" />
-        
-        <label for="campaign_text">Name this campaign: <br /><small>(this is the public title for your feedback.)</small></label>
-        <input type="text" name="new_campaign_title" placeholder="eg. 'Crepes & Things Feedback'" ng-model="new_campaign_title"/>   
-        <button class="btn" type="submit" ng-click="resetStep()">Continue</button>
-        <button class="btn" ng-click="toggleNewMode()" type="button">cancel</button>
-      </form>
-    </div>
-    <div ng-show="edit_mode == true">
-      <form ng-submit="">
-        <a class="btn" href="{{edit_link}}" ng-class="{disabled: disable_single_edit_buttons}">edit</a>
-        <a class="btn" href="{{view_link}}"  ng-class="">view</a>
-        <!--<button class="btn" ng-click="deleteAnyListItems(selected_campaigns, activeCampaignList)">delete</button>-->
-        <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, activeCampaignList)">archive</button>
-        <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)">duplicate</button>
-      </form>
-    </div>
-    
-    
-    <ul id="campaign_list" class="object_list">
+<div class="animation_wrapper layer0">
+    <header>
+      <button ng-click="toggleSidebar('right')" class="btn left">menu</button>
       
-      <li ng-repeat="campaign in activeCampaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
-        
-        <div class="left">
-          <button class="checkbox" ng-click="selectCampaign('{{campaign.id}}')"></button>
-        </div>
-        <a href="#/campaign/{{campaign.id}}/instances">
-          <small>@{{campaign.handle}}</small>
-          <h2>{{campaign.title}}</h2>
-        </a>
-      </li>
-      <li ng-show="duplicating_mode">
-        <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
-          
-          <label>Choose a handle</label>
-          <select ng-model="temp_handle">
-            <option ng-repeat="handle in handleList">{{handle}}</option>
-            <option disabled="true">no more available listening points</option>
+      <h1>{{title}}</h1>
+    </header>
+  
+    <div class="scroller_wrapper with_header_padding">
+    <section class="scroller">
+      <button class="btn full_width" ng-click="toggleNewMode()" ng-show="!new_mode" ng-hide="edit_mode == true">+ New Campaign</button>
+      <div ng-show="new_mode">
+        <form ng-submit="createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)">
+          <label for="handle_select">Choose a handle</label>
+          <select ng-model="handle" id="handle_select" ng-change="changeHandle()" >
+            <option ng-repeat="handle in handleList" ng-bind="handle" value="{{handle}}"></option>
+            <option value="+">+ create new</option>
           </select>
-          <input type="text" name="temp_name" ng-model="temporary_duplicate.title" placeholder="Type a new name for this duplicated campaign."/>
           
-          <button type="submit" class="btn">save</button>
-          <button type="reset" class="btn" ng-click="duplicateMode(false, '')">cancel</button>
+          <label for="handle_text" ng-show="handle == '+'" ng-animate="'collapse'">New handle name:</label>
+          <input id="handle_text" ng-show="handle == '+'"ng-animate="'collapse'" class="inline" type="text" name="new_handle" placeholder="Try your twitter handle!" ng-model="handle_to_submit" />
+          
+          <label for="campaign_text">Name this campaign: <br /><small>(this is the public title for your feedback.)</small></label>
+          <input type="text" name="new_campaign_title" placeholder="eg. 'Crepes & Things Feedback'" ng-model="new_campaign_title"/>   
+          <button class="btn" type="submit" ng-click="resetStep()">Continue</button>
+          <button class="btn" ng-click="toggleNewMode()" type="button">cancel</button>
         </form>
-      </li>
-    </ul>
-    <button ng-click="toggleArchived()" class="btn full_width">
-      <span ng-show="view_archived == true">hide archived</span>
-      <span ng-show="view_archived == false">view archived</span>
-    </button>
-    <ul class="object_list" ng-show="view_archived == true">
-      <li ng-repeat="campaign in archivedCampaignList">
-        <button class="btn right" ng-click="unarchiveListItem(campaign, activeCampaignList)">unarchive</button>
-
-        <a href="#/campaign/{{campaign.id}}/instances">
-          <small>@{{campaign.handle}}</small>
-          <h2>{{campaign.title}}</h2>
-        </a>
+      </div>
+      <div ng-show="edit_mode == true">
+        <form ng-submit="">
+          <a class="btn" href="{{edit_link}}" ng-class="{disabled: disable_single_edit_buttons}">edit</a>
+          <a class="btn" href="{{view_link}}"  ng-class="">view</a>
+          <!--<button class="btn" ng-click="deleteAnyListItems(selected_campaigns, activeCampaignList)">delete</button>-->
+          <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, activeCampaignList)">archive</button>
+          <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)">duplicate</button>
+        </form>
+      </div>
+      
+      
+      <ul id="campaign_list" class="object_list">
         
-      </li>
-    </ul>
-  </section>
-</div>
+        <li ng-repeat="campaign in activeCampaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
+          
+          <div class="left">
+            <button class="checkbox" ng-click="selectCampaign('{{campaign.id}}')"></button>
+          </div>
+          <a href="#/campaign/{{campaign.id}}/instances">
+            <small>@{{campaign.handle}}</small>
+            <h2>{{campaign.title}}</h2>
+          </a>
+        </li>
+        <li ng-show="duplicating_mode">
+          <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
+            
+            <label>Choose a handle</label>
+            <select ng-model="temp_handle">
+              <option ng-repeat="handle in handleList">{{handle}}</option>
+              <option disabled="true">no more available listening points</option>
+            </select>
+            <input type="text" name="temp_name" ng-model="temporary_duplicate.title" placeholder="Type a new name for this duplicated campaign."/>
+            
+            <button type="submit" class="btn">save</button>
+            <button type="reset" class="btn" ng-click="duplicateMode(false, '')">cancel</button>
+          </form>
+        </li>
+      </ul>
+      <button ng-click="toggleArchived()" class="btn full_width">
+        <span ng-show="view_archived == true">hide archived</span>
+        <span ng-show="view_archived == false">view archived</span>
+      </button>
+      <ul class="object_list" ng-show="view_archived == true">
+        <li ng-repeat="campaign in archivedCampaignList">
+          <button class="btn right" ng-click="unarchiveListItem(campaign, activeCampaignList)">unarchive</button>
+  
+          <a href="#/campaign/{{campaign.id}}/instances">
+            <small>@{{campaign.handle}}</small>
+            <h2>{{campaign.title}}</h2>
+          </a>
+          
+        </li>
+      </ul>
+    </section>
+  </div>
+  </div>
