--- a/partials/form_completed.html
+++ b/partials/form_completed.html
@@ -5,7 +5,7 @@
       <h3 ng-bind="question.text"></h3>
       <ul class='answers'>
         <li ng-repeat="answer in question.answers" class="inline" ng-show="full_form_view_on || (question.response == answer.id)">
-          <div class="checked" ng-show="full_form_view_on && (question.response == answer.id)"></div>
+          <div class="filled_answer" ng-show="full_form_view_on" ng-class="{checked: question.response == answer.id}"></div>
           <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
         </li>
       </ul>
