Please enter the commit message for your changes. Lines starting

--- a/partials/form_not_completed.html
+++ b/partials/form_not_completed.html
@@ -15,5 +15,10 @@
       <div class="empty_textarea"></div>
     </div>
     
+    <div>
+      <button>edit</button>
+      <button ng-click="deleteAnyListItems(question, buildCampaign.questionsList)">delete</button>
+    </div>
+    
   </li>
 </ol>
