--- a/partials/edit.html
+++ b/partials/edit.html
@@ -25,7 +25,6 @@
           </div>
         <div ng-switch-when='1'>
           <form method="post" action="">
-            
             <label for="title">Title:</label>
             <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
             
@@ -100,24 +99,8 @@
         
         <div ng-switch-when='4'>
           
-          <fieldset>
-            <input ng-model="discoverable" type="checkbox" class="inline" id="discoverable"/>
-            <label for="discoverable" class="inline">location discoverable?</label>
-          </fieldset>
-          
-          <div ng-show="discoverable">
-            <label for="url">Add a physical location to your access point (optional):</label>
-            <input type="text" name="location" id="location" placeholder="1 Street Address, Whereverville, FL"/>
-            <label for="location">or choose a previous location:</label>
-            <select>
-              <option>407 9th St, Brooklyn, NY</option>
-            </select>
-          </div>
-          
-          
-          
           <div>
-            
+            <h3>Security:</h3>
             <fieldset class="inline">
               <input type="checkbox"/>
               <label>public</label>
@@ -134,6 +117,30 @@
             </fieldset>
             
           </div>
+          
+          <div>
+            <input ng-model="buildCampaign.discoverable" type="checkbox" class="inline" id="discoverable"/>
+            <label for="discoverable" class="inline">location discoverable?</label>
+          </div>
+          
+          
+          <div ng-show="buildCampaign.discoverable">
+            <ol>
+              <li ng-repeat="location in buildCampaign.locationsList">
+                <p ng-bind="location.text"></p>
+              </li>
+            </ol>
+            
+            <form ng-submit="addLocation(addLocation_address.text, buildCampaign.locationsList)" ng-model="addLocation_form" name="addLocation_form">
+              <label for="url">Add an address to your campaign (optional):</label>
+              <input ng-model="addLocation_address.text" type="text" name="addLocation_address" id="addLocation_address" placeholder="1 Street Address, Whereverville, FL"/>
+              <button class="btn">+ location</button>
+            </form>
+          </div>
+          
+          
+          
+          
         </div>
       </section>
     </div>
