--- a/css/app.css
+++ b/css/app.css
@@ -904,7 +904,7 @@ label {
   margin: 10px 0 4px;
 }
 
-input[type=text], input[type=email], input[type=number], input[type=date], input[type=password], textarea {
+input[type=text], input[type=email], input[type=number], input[type=date], input[type=time], input[type=password], textarea {
   display: block;
   width: 100%;
   height: 40px;
